admin main 페이지 기능 구현 완료/ 그래프 작성 예정 sales 기본 세팅

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -36,7 +36,7 @@
         <div class="content-box">
           <div class="graph">
             <div class="graph-title">
-              <span>거래액 그래프</span>
+              <span>회원가입 현황</span>
               <span>클릭 된 버튼 / 기간</span>
             </div>
             <div class="graph-section">
@@ -44,9 +44,9 @@
             </div>
           </div>
     
-          <div class="salesRank">
+          <div class="memberList">
             <h2>최근 가입 회원</h2>
-            <table class="sales-table">
+            <table class="member-table">
               <thead>
                 <tr>
                   <th>회원번호</th>
