평점은 리뷰후 하고 판매권수 는 DB 수정후 하겠습니다

--- a/src/main/resources/static/css/searchBookPage/allBook.css
+++ b/src/main/resources/static/css/searchBookPage/allBook.css
@@ -123,3 +123,8 @@ main {
 .buttonBag button, .buttonBuy button, .buttonWish button {
   width: 100%;
 }
+
+a{
+  text-decoration: none;
+  color: black;
+}
