241112 unLoginHeader 완성. main 페이지 일반구상 완료 // footer는 구현 예정

--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -5,6 +5,10 @@
   <div th:if= "${session.loginMember != null}">
   <header th:replace="~{common/unLoginHeader :: header}"></header>
 </div>
+  <div th:if= "${session.unLoginHeader != null}">
+    <header th:replace="~{common/loginHeader :: header}">
+    </header>
+  </div>
   
   
 
