--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -7,13 +7,10 @@
 header{
   top: 0;
   width: 100%;
-  background-color: #f5f5f5;
   z-index: 1000;
-  padding: 15px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -27,18 +24,22 @@ main {
   padding: 20px;
 }
 
+h2 {
+  font-weight: bold !important;
+}
+
 .recommend, .personalized {
   margin: 20px auto;
   max-width: 800px;
   height: 410px;
   background-color: #fafafa;
   border: 1px solid black;
+  border-radius: 5px;
 }
 
 .recommend .book {
   display: flex;
   width: 798px;
-  height: 380px;
   align-items: center;
   padding: 10px;
 }
