--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -9,8 +9,8 @@
         <div class="header-container">
             <!-- 로고 -->
             <div class="logo">
-                <a href="/" th:href="@{/}">
-                    <img src="/images/logo.png" alt="Logo">
+                <a href="/">
+                    <img src="/images/logo.png" alt="Logo" class="logoImg">
                 </a>
             </div>
 
@@ -24,9 +24,9 @@
             
             <!-- 사용자 메뉴 -->
             <div class="user-menu">
-                <a href="/login"class="headerLoginBtn">로그아웃</a>
-                <a href="/join"class="headerJoinBtn">회원가입</a>
-                <a href="/cart"class="headerCartBtn">장바구니</a>
+                <a href="/login" class="headerLoginBtn">  로그아웃</a>
+                <a href="/myPage"  class="headerJoinBtn"> 마이페이지</a>
+                <a href="/cart"  class="headerCartBtn">   장바구니</a>
             </div>
             
             <!-- 검색 바 -->
