--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -1,56 +1,19 @@
-<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="header">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>비로그인 시 헤더</title>
-    <link rel="stylesheet" href="/css/plagments/header.css" th:href="@{/css/plagments/header.css}">
+    <link rel="stylesheet" href="/css/fragments/header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Header</title>
-    <div class="header-container">
-        <!-- 로고 -->
-        <div class="logo">
-            <a href="/" th:href="@{/}">
-                <img src="/images/logo.png" alt="Logo" th:src="@{/images/logo.png}">
-            </a>
-        </div>
-
-
-        <!-- 카테고리 메뉴 -->
-        <nav class="categories">
-            <a href="#" th:href="@{/category1}">카테고리1</a>
-            <a href="#" th:href="@{/category2}">카테고리2</a>
-            <a href="#" th:href="@{/category3}">카테고리3</a>
-            <a href="#" th:href="@{/customer-support}">고객지원</a>
-        </nav>
-
-        <!-- 사용자 메뉴 -->
-        <div class="user-menu">
-            <a href="/login"class="headerLoginBtn">로그아웃</a>
-            <a href="/myPage"class="headerJoinBtn">마이페이지</a>
-            <a href="/cart"class="headerCartBtn">장바구니</a>
-        </div>
-
-        <!-- 검색 바 -->
-        <div class="search-bar">
-            <form action="#" method="get">
-                <input type="text" name="query" placeholder="검색어를 입력하세요" />
-                <button type="submit">Search</button>
-            </form>
-        </div>
-    </div>
-
-    
-</head>
-
 <body>
     <header>
         <div class="header-container">
             <!-- 로고 -->
             <div class="logo">
-                <a href="/" th:href="@{/}">
-                    <img src="../static/images/logo.png" alt="Logo">
+                <a href="/">
+                    <img src="/images/logo.png" alt="Logo" class="logoImg">
                 </a>
             </div>
 
@@ -61,22 +24,19 @@
                 <a href="#">카테고리3</a>
                 <a href="#">고객지원</a>
             </nav>
-
-            <!-- 사용자 메뉴 -->
-            <div class="user-menu">
-                <button type="button" class="btn btn-primary" onclick="toggleModal()">로그인</button>
-                <a href="/join" class="headerJoinBtn">회원가입</a>
-                <a href="/cart" class="headerCartBtn">장바구니</a>
-            </div>
-
-            
-
             <!-- 검색 바 -->
             <div class="search-bar">
                 <form action="#" method="get">
                     <input type="text" name="query" placeholder="검색어를 입력하세요" />
                     <button type="submit">Search</button>
                 </form>
+            </div>
+
+            <!-- 사용자 메뉴 -->
+            <div class="user-menu">
+                <button type="button" class="btn btn-primary" onclick="toggleModal()">로그인</button>
+                <a href="/member/signUp" class="headerJoinBtn">회원가입</a>
+                <a href="/cart" class="headerCartBtn">장바구니</a>
             </div>
         </div>
     </header>
@@ -120,7 +80,7 @@
         </div>
     </div>
 
-    <script src="../../static/js/plagments/header.js"></script>
+    <script src="/static/js/fragments/header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
