--- a/src/main/resources/templates/order/afterOrder.html
+++ b/src/main/resources/templates/order/afterOrder.html
@@ -7,7 +7,8 @@
 
 </head>
 <body>
-  <section class="addressSection">
+  <p>ㅎㅇ</p>
+  <!-- <section class="addressSection">
     <div>
       <h2>주문/ 배송 조회</h2>
           <p>주문이 완료되었습니다</p>
@@ -39,6 +40,6 @@
         <button>결제하기</button>
       </div>
     </section>
-  </div>
+  </div> -->
 </body>
 </html>
