--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -122,6 +122,9 @@
     </div>
   </section>
 
+<!-- 푸터 조각 삽입 -->
+<footer th:replace="~{common/footer :: footer}"></footer>
+
   <script src="/js/main/main.js"></script>
 </body>
 </html>
