--- a/src/main/resources/static/css/searchBookPage/allBook.css
+++ b/src/main/resources/static/css/searchBookPage/allBook.css
@@ -34,20 +34,39 @@ main {
   padding: 20px;
 }
 
+.search-result-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .search-result {
   font-size: 20px;
-  margin-bottom: 20px;
+}
+
+.check-toGo {
+  display: flex;
+  gap: 10px;
 }
 
 .book-item {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   background-color: #eaeaea;
   padding: 20px;
   border: 2px solid #ccc;
   margin-bottom: 20px;
   gap: 20px;
   position: relative;
+}
+
+.book-checkbox {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  accent-color: #fc9562;
+  margin-right: 10px;
 }
 
 .book-item-image {
@@ -124,7 +143,12 @@ main {
   width: 100%;
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
 }
+
+.allCheck {
+  margin-left: auto;
+}
+
