--- a/src/main/resources/templates/order/afterOrder.html
+++ b/src/main/resources/templates/order/afterOrder.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>결제 완료 페이지</title>
+  <link rel="stylesheet" href="/css/order/order.css">
 
 </head>
 <body>
-  <p>ㅎㅇ</p>
-  <!-- <section class="addressSection">
+  <section class="addressSection">
     <div>
       <h2>주문/ 배송 조회</h2>
           <p>주문이 완료되었습니다</p>
@@ -19,27 +19,23 @@
   <div class="orderMainContainer">
     <section class="orderlistSection">
       <div>
-        <h4>주문 상품 목록</h4> <h3>총 N 개</h3>
+        <h4>주문 상품 목록 <button>취소 신청</button></h4> 
+        <h3>총 N 개</h3>
+        
         <hr>
          <div class="basicAddress">
             <div>
-              <img src="{imgUrl}" alt="책 사진";>
-              <h3>책 제목    개수     가격</h3>
+              <h3>배송 정보</h3>
+              <h4>받는 사람 / 전화번호 <button>배송정보 변경</button></h4>
+              <h4>주소 ~~~</h4>
+
+
             </div>
          </div>
       </div>
     </section>
   
-    <section class="orderBtnSection">
-      <div>
-        <h3>상품 금액 : OOO 원</h3>
-        <h3>배송비    : OOO 원</h3>
-        <h3>마일리지 사용 : OOO 원</h3>
-        <hr>
-        <h3>최종 결제 금액 :  OOO 원</h3>
-        <button>결제하기</button>
-      </div>
-    </section>
-  </div> -->
+    
+  </div>
 </body>
 </html>
