--- a/src/main/resources/static/css/cart/cart.css
+++ b/src/main/resources/static/css/cart/cart.css
@@ -1,10 +1,9 @@
 * {
   padding: 0;
   box-sizing: border-box;
-  border: 1px solid black;
 }
 
-body {
+.cartMain {
   font-family: Arial, sans-serif;
   margin-left: 18%;
 }
@@ -127,10 +126,10 @@ body {
 .slider-indicator .scroll-bar {
   height: 100%;
   background: #333;
-  width: 10%; /* 초기 너비 */
+  width: 10%;
   border-radius: 2px;
   transform: translateX(0);
-  transition: transform 0.1s ease-out; /* 부드러운 이동 */
+  transition: transform 0.1s ease-out; 
 }
 
 
