20241113 로그인 작성중

--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -78,11 +78,7 @@ header {
   text-decoration-line: none;
 }
 
-.headerJoinBtn{
-  background-color: #0D6EFD;
-  color:white;
-}
-.headerCartBtn{
-  background-color: #0D6EFD;
-  color:white;
+#modalLogin {
+  display: none;
+  position: fixed;
 }
