--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -1,15 +1,16 @@
 <div th:fragment="cssLinks">
   <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </div>
-  <!-- 세션 상태에 따른 헤더 삽입 -->
-  <div th:if= "${session.loginMember != null}">
+<!-- 세션 상태에 따른 헤더 삽입 -->
+<div th:if="${session.loginMember == null}">
   <header th:replace="~{common/unLoginHeader :: header}"></header>
 </div>
-  <div th:if= "${session.unLoginHeader != null}">
-    <header th:replace="~{common/loginHeader :: header}">
-    </header>
-  </div>
-  
-  
+<div th:if="${session.loginMember != null}">
+  <header th:replace="~{common/loginHeader :: header}">
+  </header>
+</div>
 
-  <script th:src="@{/js/fragments/header.js}"></script>
+
+<script th:src="@{/js/fragments/header.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
