--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -14,6 +14,7 @@
             <a href="#">카테고리3</a>
             <a href="#">고객지원</a>
         </nav>
+        
         <!-- 검색 바 -->
         <div class="search-bar">
             <form action="#" method="get">
@@ -41,7 +42,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-5 pt-0">
-                    <form action="member/login" method="POST">
+                    <form>
                         <div class="form-floating mb-3">
                             <input type="text" name="memberId" class="form-control rounded-3" id="floatingInput"
                                 placeholder="아이디를 입력하세요.">
@@ -64,7 +65,6 @@
                     <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
                         카카오톡 로그인
                     </button>
-
                 </div>
             </div>
         </div>
