admin main Page 그래프 제외 완료 book DTO 수정 admin manager Page 작성중

--- a/src/main/resources/static/css/admin/manager.css
+++ b/src/main/resources/static/css/admin/manager.css
@@ -1,17 +1,22 @@
 *{
   border: 1px solid black;
+  margin: 0;
+  padding: 0;
 }
 
 .content-box{
   display: flex;
   flex-direction: row;
   align-items: start;
-  justify-content: space-between;
+  justify-content: start;
+
+  margin-top: 10px;
 }
 
 .sideBar{
   width: 300px;
-  height: 850PX;
+  height: 850px;
+  margin-right: 80px;
 }
 
 .content{
