--- a/src/main/resources/templates/admin/manager.html
+++ b/src/main/resources/templates/admin/manager.html
@@ -6,14 +6,36 @@
   <title>재고관리</title>
 
   <link rel="stylesheet" href="/css/admin/manager.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <h1>해더</h1>
 
   <section class="content-box">
     <div class="sideBar">
-      사이드바
+      <h3>
+        <a href="/admin">회원 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/sales">매출 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/manager">재고 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/request">발주 요청</a>
+      </h3>
+      <h3>
+        <a href="/admin/newBook">새 책 등록</a>
+      </h3>
+      <h3>
+        <a href="/admin/query">문의 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/review">리뷰 관리</a>
+      </h3>
+      <h3>
+        <a href="#">추가 해야되면 복사</a>
+      </h3>
     </div>
   
     <div class="content">
@@ -23,6 +45,16 @@
   
       <div class="graph-box">
         그래프 그리기(출판사별, 책종류별, 저자별, 가격별)
+        <label class="sort-dropdown">
+          <select id="sortSelect" >
+              <option value="all">전체</option>
+              <option value="company">출판사</option>
+              <option value="category">책 카테고리별</option>
+              <option value="writer">저자별</option>
+              <option value="payment">가격별</option>
+          </select>
+          <input type="text" id="searchText" hidden>
+        </label>
       </div>
   
       <div class="list">
@@ -33,7 +65,7 @@
               <th>책 제목</th>
               <th>책 저자</th>
               <th>출판사</th>
-              <th>가격</th>
+              <th>잔여 수량 / 최초 발주 수량</th>
               <th>등록일자</th>
               <th>등록 여부(Y/N)</th>
               <th>
@@ -42,13 +74,13 @@
             </tr>
           </thead>
 
-          <tbody>
+          <tbody id="bookList">
             <tr>
               <th>1</th>
               <th>이것이 JAVA!</th>
               <th>000</th>
               <th>KH출판사</th>
-              <th>25,000원</th>
+              <th>40 / 100</th>
               <th>2024.11.11</th>
               <th>N</th>
               <th>
@@ -172,6 +204,6 @@
     </div>
   </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/admin/manager.js"></script>
 </body>
 </html>
