--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -22,7 +22,7 @@
                 <a href="#">카테고리1</a>
                 <a href="#">카테고리2</a>
                 <a href="#">카테고리3</a>
-                <a href="/main/query">고객지원</a>
+                <a href="#">고객지원</a>
             </nav>
             <!-- 검색 바 -->
             <div class="search-bar">
