--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -19,7 +19,7 @@
                 <a href="#">카테고리1</a>
                 <a href="#">카테고리2</a>
                 <a href="#">카테고리3</a>
-                <a href="/main/query">고객지원</a>
+                <a href="#">고객지원</a>
             </nav>
             
             <!-- 사용자 메뉴 -->
