top 버튼 오류 해결. header 로고이미지 극대화 오류 해결

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -51,5 +51,5 @@
     </div>
     <!-- 푸터 스타일 링크 추가 -->
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <script src="js/fragments/footer.js"></script>
+    <script src="/js/fragments/footer.js"></script>
 </div>
