--- a/src/main/resources/templates/main/query.html
+++ b/src/main/resources/templates/main/query.html
@@ -9,20 +9,7 @@
 </head>
 
 <body>
-  <header th:replace="~{common/common :: header}"></header>
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <header th:replace="~{common/common}"></header>
 
   <form method="post" action="/main/query">
     <div class="container">
@@ -56,7 +43,7 @@
                 <div><button type="submit" class="btn btn-primary">작성하기</button></div>
             </div>
   </form>
-  
+
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
@@ -89,12 +76,11 @@
 
   <br><br><br><br>
 
-  <!-- 푸터 조각 삽입 -->
-  <footer th:replace="~{common/footer :: footer}"></footer>
+<!-- 푸터 조각 삽입 -->
+<footer th:replace="~{common/footer :: footer}"></footer>
+<script src="/js/main/main.js"></script>
 
-  <script src="/js/main/main.js"></script>
 
-  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
 </body>
 
