--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/cart/cart.css">
 </head>
 <body>
-  <header th:replace="~{common/unLoginHeader :: header}"></header>
+  <header th:replace="~{common/common}"></header>
   <main class="cartMain">
     <section class="cartSection">
       <h2>장바구니</h2>
@@ -24,38 +24,20 @@
               </tr>
           </thead>
           <tbody>
-              <tr>
+            <tbody>
+              <tr th:each="item : ${cartItems}">
                 <td><input type="checkbox"></td>
-                <td><img src="book1.jpg" alt="책 이미지"></td>
-                <td>책 이름 1</td>
-                <td>10,000원</td>
-                <td>1(여기에는 누르면 수량 바뀌게 리액트로 설정할 예정)</td>
-                <td><button class="delete-btn">X</button></td>
+                <td><img th:src="@{${item.bookCover}}" alt="책 이미지"></td>
+                <td th:text="${item.bookTitle}"></td>
+                <td th:text="${item.bookPrice} + '원'"></td>
+                <td>
+                  <input type="number" th:value="${item.cartCount}" min="1" class="quantity-input" />
+                </td>
+                <td>
+                  <button class="delete-btn" th:attr="data-id=${item.bookNo}">X</button>
+                </td>
               </tr>
-              <tr>
-                <td><input type="checkbox"></td>
-                <td><img src="book2.jpg" alt="책 이미지"></td>
-                <td>책 이름 2</td>
-                <td>15,000원</td>
-                <td>1(여기에는 누르면 수량 바뀌게 리액트로 설정할 예정)</td>
-                <td><button class="delete-btn">X</button></td>
-              </tr>
-              <tr>
-                <td><input type="checkbox"></td>
-                <td><img src="book3.jpg" alt="책 이미지"></td>
-                <td>책 이름 3</td>
-                <td>10,000원</td>
-                <td>1(여기에는 누르면 수량 바뀌게 리액트로 설정할 예정)</td>
-                <td><button class="delete-btn">X</button></td>
-              </tr>
-              <tr>
-                <td><input type="checkbox"></td>
-                <td><img src="book4.jpg" alt="책 이미지"></td>
-                <td>책 이름 4</td>
-                <td>15,000원</td>
-                <td>1(여기에는 누르면 수량 바뀌게 리액트로 설정할 예정)</td>
-                <td><button class="delete-btn">X</button></td>
-              </tr>
+            </tbody>
           </tbody>
         </table>
       </div>
