--- a/src/main/resources/templates/admin/schedule.html
+++ b/src/main/resources/templates/admin/schedule.html
@@ -11,9 +11,34 @@
   <h1>일정관리</h1>
 
   <section class="content">
-
-    <div class="title">
-      상단
+    <div class="sideBar">
+      <h3>
+        <a href="/admin">회원 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/sales">매출 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/manager">재고 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/schedule">일정 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/request">발주 요청</a>
+      </h3>
+      <h3>
+        <a href="/admin/newBook">새 책 등록</a>
+      </h3>
+      <h3>
+        <a href="/admin/query">문의 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/review">리뷰 관리</a>
+      </h3>
+      <h3>
+        <a href="#">추가 해야되면 복사</a>
+      </h3>
     </div>
 
     <div class="calendar">
