--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -12,7 +12,33 @@
   
   <section class="content-box">
     <div class="sideBar">
-      사이드바
+      <h3>
+        <a href="/admin">회원 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/sales">매출 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/manager">재고 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/schedule">일정 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/request">발주 요청</a>
+      </h3>
+      <h3>
+        <a href="/admin/newBook">새 책 등록</a>
+      </h3>
+      <h3>
+        <a href="/admin/query">문의 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/review">리뷰 관리</a>
+      </h3>
+      <h3>
+        <a href="#">추가 해야되면 복사</a>
+      </h3>
     </div>
   
     <div class="content">
