--- a/src/main/resources/templates/admin/manager.html
+++ b/src/main/resources/templates/admin/manager.html
@@ -22,6 +22,9 @@
         <a href="/admin/manager">재고 관리</a>
       </h3>
       <h3>
+        <a href="/admin/schedule">일정 관리</a>
+      </h3>
+      <h3>
         <a href="/admin/request">발주 요청</a>
       </h3>
       <h3>
@@ -53,8 +56,14 @@
               <option value="writer">저자별</option>
               <option value="payment">가격별</option>
           </select>
-          <input type="text" id="searchText" hidden>
         </label>
+        <div>
+          <input type="text" id="searchText" hidden>
+        </div>
+
+        <ul id="resultArea">
+
+        </ul>
       </div>
   
       <div class="list">
