--- a/src/main/resources/templates/admin/sales.html
+++ b/src/main/resources/templates/admin/sales.html
@@ -12,7 +12,35 @@
   <h1>우측에 이름, 직급(담당업무)/비밀번호/이메일 변경 페이지로 이동</h1>
 
   <section class="content-box">
-    <div class="sideBar">사이드바</div>
+    <div class="sideBar">
+      <h3>
+        <a href="/admin">회원 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/sales">매출 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/manager">재고 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/schedule">일정 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/request">발주 요청</a>
+      </h3>
+      <h3>
+        <a href="/admin/newBook">새 책 등록</a>
+      </h3>
+      <h3>
+        <a href="/admin/query">문의 관리</a>
+      </h3>
+      <h3>
+        <a href="/admin/review">리뷰 관리</a>
+      </h3>
+      <h3>
+        <a href="#">추가 해야되면 복사</a>
+      </h3>
+    </div>
   
     <div class="content">
       <h2>매출관리</h2>
