일단 다 못했지만 올립니다. 확인 부탁 드립니다

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -17,11 +17,12 @@
 
         <!-- 검색 바 -->
         <div class="search-bar">
-            <form action="#" method="get">
+            <form action="/searchBooks" method="get">
                 <input type="text" name="query" placeholder="검색어를 입력하세요" />
                 <button type="submit">Search</button>
             </form>
         </div>
+        
 
         <!-- 사용자 메뉴 -->
         <div class="user-menu">
@@ -29,5 +30,6 @@
             <a href="/myPage" class="btn btn-primary headerJoinBtn"> 마이페이지</a>
             <a href="/cart" class="btn btn-primary headerCartBtn"> 장바구니</a>
         </div>
+        <script src="/js/searchBookPage/searchBook.js"></script>
     </header>
 </div>
