--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -17,12 +17,13 @@
       <div class="form-floating col-6 position-relative">
         <input type="text" class="form-control" id="floatingInput" placeholder="아이디 입력" required>
         <label for="floatingInput">아이디</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingInput')" aria-label="Clear" tabindex="-1"></button>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingInput')" aria-label="Clear"
+          tabindex="-1"></button>
         <div class="invalid-feedback">아이디를 입력해주세요.</div>
       </div>
       <div class="col-auto">
-        <span id="idHelpInline" class="form-text">영어와 숫자만 사용</span> <br>
-        <span id="idHelpInline" class="form-text">6~12자 사이로 작성</span>
+        <span id="idHelpLength" class="form-text">6~12자 사이로</span> <br>
+        <span id="idHelpAlphaNumeric" class="form-text">영어와 숫자만 사용</span>
       </div>
       <div class="col-auto">
         <button type="button" class="btn btn-primary">ID 중복검사</button>
@@ -35,12 +36,13 @@
       <div class="form-floating col-6 position-relative">
         <input type="password" class="form-control" id="floatingPassword" placeholder="비밀번호 입력" required>
         <label for="floatingPassword">비밀번호</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingPassword')" aria-label="Clear" tabindex="-1"></button>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingPassword')" aria-label="Clear"
+          tabindex="-1"></button>
         <div class="invalid-feedback">비밀번호를 입력해주세요.</div>
       </div>
       <div class="col-auto">
-        <span id="passwordHelpInline" class="form-text">문자, 특수문자, 숫자를 모두 사용</span> <br>
-        <span id="passwordHelpInline" class="form-text">8~12자 사이로 작성</span>
+        <span id="passwordHelpLength" class="form-text">8~12자 사이로</span> <br>
+        <span id="passwordHelpChars" class="form-text">문자, 특수문자, 숫자를 모두 사용</span> 
       </div>
     </div>
 
@@ -49,13 +51,15 @@
       <div class="form-floating col-6 position-relative">
         <input type="text" class="form-control" id="floatingName" placeholder="이름 입력" required>
         <label for="floatingName">이름</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingName')" aria-label="Clear" tabindex="-1"></button>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingName')" aria-label="Clear"
+          tabindex="-1"></button>
         <div class="invalid-feedback">이름을 입력해주세요.</div>
       </div>
       <div class="form-floating col-6 position-relative">
         <input type="text" class="form-control" id="floatingBirth" placeholder="YYYY/MM/DD">
-        <label for="floatingBirth">생일 (YYYY/MM/DD)</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingBirth')" aria-label="Clear" tabindex="-1"></button>
+        <label for="floatingBirth">생일 (YYYYMMDD)</label>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingBirth')" aria-label="Clear"
+          tabindex="-1"></button>
       </div>
     </div>
 
@@ -63,9 +67,10 @@
     <div class="form-floating row g-3 mb-2 mt-2 position-relative">
       <div class="form-floating col-6 position-relative">
         <input type="tel" class="form-control" id="floatingPhone" placeholder="전화번호 입력" required>
-        <label for="floatingPhone">전화번호</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingPhone')" aria-label="Clear" tabindex="-1"></button>
-        <div class="invalid-feedback">전화번호를 입력해주세요.</div>
+        <label for="floatingPhone">전화번호 (-없이 숫자만 작성해주세요)</label>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingPhone')" aria-label="Clear"
+          tabindex="-1"></button>
+        <div class="invalid-feedback">전화번호를 입력해주세요. 개발자 도구에 window.setPhoneVerified(true) 입력 시 인증 완료</div>
       </div>
       <div class="col-auto">
         <button type="button" class="btn btn-primary">전화번호 인증</button>
@@ -76,8 +81,9 @@
     <div class="form-floating row g-3 mb-2 mt-2 position-relative">
       <div class="form-floating col-8 position-relative">
         <input type="text" class="form-control" id="floatingAddress" placeholder="주소 입력">
-        <label for="floatingAddress">주소</label>
-        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingAddress')" aria-label="Clear" tabindex="-1"></button>
+        <label for="floatingAddress">주소(기본 배송지)</label>
+        <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingAddress')" aria-label="Clear"
+          tabindex="-1"></button>
       </div>
       <div class="col-auto">
         <button type="button" class="btn btn-secondary" onclick="openAddressPopup()">주소 찾기</button>
@@ -96,7 +102,8 @@
     <div class="form-floating mb-2 mt-2 position-relative">
       <input type="text" class="form-control" id="floatingDetailAddress" placeholder="상세 주소">
       <label for="floatingDetailAddress">상세 주소</label>
-      <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingDetailAddress')" aria-label="Clear"></button>
+      <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingDetailAddress')"
+        aria-label="Clear"></button>
     </div>
 
     <!-- 가입 버튼 -->
