admin manager page update

--- a/src/main/resources/templates/admin/manager.html
+++ b/src/main/resources/templates/admin/manager.html
@@ -52,9 +52,7 @@
           <select id="sortSelect" >
               <option value="all">전체</option>
               <option value="company">출판사</option>
-              <option value="category">책 카테고리별</option>
-              <option value="writer">저자별</option>
-              <option value="payment">가격별</option>
+              <option value="title">책 제목별</option>
           </select>
         </label>
         <div>
