--- a/src/main/resources/static/css/admin/main.css
+++ b/src/main/resources/static/css/admin/main.css
@@ -1,5 +1,14 @@
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 *{
   border: 1px solid black;
+  font-family: 'Pretendard-Regular';
 }
 
 .content-box{
