--- a/src/main/resources/static/css/order/order.css
+++ b/src/main/resources/static/css/order/order.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-style: normal;
+}
+
 *{
-  border: 1px solid black;
+  font-family: 'Pretendard-Regular';
+  font-weight: 100;
 }
 
 body{
